fix: fix text overflow for movie overview

--- a/movie-app/scss/_movie-card.scss
+++ b/movie-app/scss/_movie-card.scss
@@ -107,5 +107,6 @@
     text-overflow: ellipsis;
     -webkit-line-clamp: 10;
     -webkit-box-orient: vertical;
+    margin-bottom: auto;
   }
 }
